# CompMathLabs

./: .gitignore  CMakeLists.txt  README.md
numerical_differentiation/: main  main.cpp  numerical_differentiation.cpp  numerical_differentiation.h  report.ipynb  test  test.cpp
source/: CMakeLists.txt
source/bdf/: bdf.h  main  main.cpp  report.ipynb
source/convection_equation/: ConvEqSolver.h  data_lc06.txt  data_lc1.txt  data_lc101.txt  data_lw06.txt  data_lw1.txt  data_lw101.txt  main.cpp  plot.gp
source/heat_equation/: crank_nicoslon.h  main.cpp  main.py  tridiagonal_matrix.h
source/heat_equation_2d/: csr_matrix.h  main.cpp  main.py  solver.h  vector_operations.h
source/integration/: N3.txt  N5.txt  integration.h  main.cpp  report.ipynb  rungerichardson.txt
source/interpolation/: interpolation.h  main.cpp  report.ipynb
source/nonlinear_equations/: e01.txt  e02.txt  e05.txt  e08.txt  main.cpp  nonlinear_equations.h  report.ipynb
source/numerical_differentiation/: dataN3.txt  dataN4.txt  dataN5.txt  main.cpp  numerical_differentiation.h  report.ipynb
source/riemann_problem/: main.cpp  plot.gp  solver.h
source/runge_kutta/: main  main.cpp  report.ipynb  runge_kutta.h
source/shooting_method/: shooting_method.h
source/spline/: data10.txt  data20.txt  data40.txt  data5.txt  data80.txt  main  main.cpp  report.ipynb  spline.h
tests/: CMakeLists.txt  SOR_test.cpp  bdf_test.cpp  integration_test.cpp  interpolation_test.cpp  kepler_solver_test.cpp  numerical_differentiation_test.cpp  runge_kutta_test.cpp  shooting_method_test.cpp  spline_test.cpp  three_diagonal_matrix_test.cpp
